NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/CONTAINER_Stock_Inventory__c.object-meta.xml
<CustomObject>
    <description>Stock Inventory details</description>
    <label>Stock Inventory</label>
    <nameField>
        <label>Stock Inventory Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Stock Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>