NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Inventory_Job__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Inventory_Job__c</fullName>
    <label>Job #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>