NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Inventory_Job_lookup__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Inventory_Job_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>LOOKUP WITH QUOTE OBJECT FOR JOB #</description>
    <label>Job # lookup</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Stock Inventory</relationshipLabel>
    <relationshipName>Stock_Inventory</relationshipName>
    <type>Lookup</type>
</CustomField>