NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Inventory_Model__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Inventory_Model__c</fullName>
    <label>Model</label>
    <length>255</length>
    <type>Text</type>
</CustomField>