NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Inventory_Qty_lookup__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Inventory_Qty_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Qty field lookup from Quote</description>
    <label>Qty lookup</label>
    <referenceTo>SBQQ__Quote__c</referenceTo>
    <relationshipLabel>Stock Inventory (Qty)</relationshipLabel>
    <relationshipName>Stock_Inventory1</relationshipName>
    <type>Lookup</type>
</CustomField>