NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Quote__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote__c</fullName>
    <description>Quote number</description>
    <label>Quote #</label>
    <length>48</length>
    <type>Text</type>
</CustomField>