NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Quote_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Product_Type__c</fullName>
    <label>Quote Product Type</label>
    <length>48</length>
    <type>Text</type>
</CustomField>