NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Quote_Product_Type_Number__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Quote_Product_Type_Number__c</fullName>
    <label>Quote Product Type Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>