NATTQA-ENV/force-app/main/default/objects/CONTAINER_Stock_Inventory__c/fields/CONTAINER_Remaining_Quantity__c.field-meta.xml
<CustomField>
    <fullName>CONTAINER_Remaining_Quantity__c</fullName>
    <label>Remaining Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>